@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-08T16:11:37Z",
+  "timestamp" : "2022-06-10T08:11:40Z",
   "count_outdated" : 391,
   "uniques_outdated" : 20,
-  "count" : 408,
-  "uniques" : 25,
+  "count" : 410,
+  "uniques" : 26,
   "views" : [
     {
       "timestamp": "2022-05-30T00:00:00Z",
@@ -37,6 +37,13 @@
       "timestamp": "2022-06-08T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-10T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
