@@ -1,3 +1,10 @@
+2022-06-10T08:11:40Z:
+* notice: last 14d: unq all: 1 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 20 391 / 25 408
+* notice: next accum: outdated-unq outdated-all / unq all: 20 391 / 26 410
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-06-10]
+
 2022-06-08T16:11:37Z:
 * notice: last 14d: unq all: 1 17
 * notice: prev accum: outdated-unq outdated-all / unq all: 20 391 / 24 407
